--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     change-log: classpath:db/db.changelog-master.yaml
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -40,6 +40,18 @@ spring:
             instanceId: AUTO
           threadPool:
             threadCount: 5
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: fadwacherqui2@gmail.com
+    password: cmup wxrx rusq tapz
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
 
 application:
   security:
